--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "covreport",
   "version": "1.0.0",
   "description": "covreport will share the converage report based on the report generate by the code",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "ncc build src/index.js --license licenses.txt"
+    "test": "ncc build ./src/main.ts --license licenses.txt"
   },
   "repository": {
     "type": "git",
@@ -20,11 +20,32 @@
   ],
   "author": "itsparser",
   "license": "MIT",
+  "dependencies": {
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
+    "@octokit/plugin-retry": "^5.0.5",
+    "js-yaml": "^4.1.0",
+    "minimatch": "^9.0.3"
+  },
   "bugs": {
     "url": "https://github.com/itsparser/covreport/issues"
   },
   "homepage": "https://github.com/itsparser/covreport#readme",
   "devDependencies": {
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "@types/node": "^16.11.7",
+    "@types/jest": "^27.4.1",
+    "@types/js-yaml": "^4.0.5",
+    "@types/minimatch": "^5.1.2",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "@vercel/ncc": "^0.36.1",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^27.5.1",
+    "prettier": "^3.0.2",
+    "ts-jest": "^27.1.3"
   }
 }
