--- a/package.json
+++ b/package.json
@@ -37,15 +37,11 @@
     "@types/jest": "^27.4.1",
     "@types/js-yaml": "^4.0.5",
     "@types/minimatch": "^5.1.2",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
     "@vercel/ncc": "^0.36.1",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^27.5.1",
-    "prettier": "^3.0.2",
-    "ts-jest": "^27.1.3"
+    "prettier": "^3.0.2"
   }
 }
