--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Code Coverage Report "
+name: "Code CovReport"
 description: "Comments a pull request with the pytest code coverage badge and full report"
 author: "itsparser"
 branding:
